# cpp-to-ops-converter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  PLAN.md  README.md  a.out  build.sh  buildt.txt  dmp.mlir  dump.mlir  locals.mlir  output.txt  polyoutput.txt  res.mlir  res.txt  scffor.mlir  temp.mlir  test.cpp  test_test_count.afine.mlir  tmp.mlir  tmp1.mlir
build_archive/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake
doc/: build.py
in/: pom2k_c_header.h  test.c  test_alt.c
include/: CMakeLists.txt
ops-converter/: CMakeLists.txt  bak1.cpp  ops-converter.cpp  ops-converter_convert_for.cpp  ops-converternot_working_ifs.cpp
ops-converter/Lib/: ExpressionTree.h  helpers.cpp  helpers.h
out copy 2/: _ext_comp_vamax__debug.mlir  example.json  ext_aam_.json  ext_add_ad_2d_.json  ext_adjust_u_v_.json  ext_advave_.json  ext_advct_.json  ext_advq_.json  ext_advt1_.json  ext_advt2_.json  ext_advu_.json  ext_advv_.json  ext_apply_filter_.json  ext_baropg_.json  ext_bcond_1_.json  ext_bcond_2_.json  ext_bcond_3_.json  ext_bcond_5_.json  ext_comp_vamax_.json  ext_comp_vamax__debug.mlir  ext_dens_.json  ext_elf_update_.json  ext_etf_.json  ext_final_internal_update_.json  ext_flux_update_.json  ext_init_horizontal_velocities_.json  ext_init_internal_.json  ext_profq_.json  ext_proft_.json  ext_profu_.json  ext_profv_.json  ext_smol_adif_.json  ext_time_internal_forward_.json  ext_uaf_.json  ext_update_turbulane_.json  ext_update_u_v_.json  ext_updeta_t_s_.json  ext_vaf_.json  ext_vert_avgs_.json  ext_vertvl_.json  (+23 more)
(+60 files in other folders)
